PLANET-5116 Fix block vertical spacing

--- a/assets/src/scss/pages/post/_author-block.scss
+++ b/assets/src/scss/pages/post/_author-block.scss
@@ -1,6 +1,12 @@
 .author-block {
-  margin-bottom: 55px;
   overflow: hidden;
+  margin-top: $space-xs;
+  margin-bottom: $space-md;
+
+  @include large-and-up {
+    margin-top: $space-md;
+    margin-bottom: $space-lg;
+  }
 
   @include medium-and-up {
     display: flex;
